--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,63 +1,85 @@
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">User page</h1>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" (change)="toggleSection($event, 0)" checked value="" id="defaultCheck1">
+      <label class="form-check-label" for="exampleRadios1">
+        Show Bio Section
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" (change)="toggleSection($event, 1)" checked  value="" id="defaultCheck1">
+      <label class="form-check-label" for="exampleRadios2">
+        Show Friend Section
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" (change)="toggleSection($event, 2)" checked value="" id="defaultCheck1">
+      <label class="form-check-label" for="exampleRadios2">
+        Show Post Section
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" (change)="toggleSection($event, 3)" value="" id="defaultCheck1">
+      <label class="form-check-label" for="exampleRadios2">
+        Show System Configuration
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" (change)="toggleSection($event, 4)" value="" id="defaultCheck1">
+      <label class="form-check-label" for="exampleRadios2">
+        Show Admin Panel
+      </label>
+    </div>
+  </div>
+</div>
 <div class="container">
   <div class="row">
-    <div class="col-md-12 m-4">
-      <div class="card border-primary mb-3" >
-        <div class="card-header">Bio Section</div>
-        <div class="card-body text-primary">
-          <h5 class="card-title">Biography </h5>
-          <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
+      <div class="col-4" *isAuthorized="'bio-section'; in : userViewableSections">
+        <div class="card border-primary mb-3" >
+          <div class="card-header">Bio Section</div>
+          <div class="card-body text-primary">
+            <h5 class="card-title">Biography </h5>
+            <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
+          </div>
         </div>
       </div>
-      <div class="card border-secondary mb-3" >
-        <div class="card-header">Friend Section</div>
-        <div class="card-body text-secondary">
-          <h5 class="card-title">Friends List </h5>
-          <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
+      <div class="col-4" *isAuthorized="'friends-section'; in : userViewableSections">
+        <div class="card border-secondary mb-3" >
+          <div class="card-header">Friend Section</div>
+          <div class="card-body text-secondary">
+            <h5 class="card-title">Friends List </h5>
+            <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
+          </div>
         </div>
       </div>
-      <div class="card border-success mb-3" >
-        <div class="card-header">Post Section</div>
-        <div class="card-body text-success">
-          <h5 class="card-title">Success </h5>
-          <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card border-danger mb-3" >
-        <div class="card-header">Header</div>
-        <div class="card-body text-danger">
-          <h5 class="card-title">Danger </h5>
-          <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card border-warning mb-3" >
-        <div class="card-header">Header</div>
-        <div class="card-body text-warning">
-          <h5 class="card-title">Warning </h5>
-          <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card border-info mb-3" >
-        <div class="card-header">Header</div>
-        <div class="card-body text-info">
-          <h5 class="card-title">Info </h5>
-          <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card border-light mb-3" >
-        <div class="card-header">Header</div>
-        <div class="card-body">
-          <h5 class="card-title">Light </h5>
-          <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-      <div class="card border-dark mb-3" >
-        <div class="card-header">Header</div>
-        <div class="card-body text-dark">
-          <h5 class="card-title">Dark </h5>
-          <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
-        </div>
-      </div>
-    </div>
+      <div class="col-4" *isAuthorized="'posts-section'; in : userViewableSections">
 
-  </div>
+        <div class="card border-success mb-3" >
+          <div class="card-header">Post Section</div>
+          <div class="card-body text-success">
+            <h5 class="card-title">Success </h5>
+            <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-4" *isAuthorized="'system-config'; in : userViewableSections">
+        <div class="card border-danger mb-3" >
+          <div class="card-header">System configuration</div>
+          <div class="card-body text-danger">
+            <h5 class="card-title">Configuration </h5>
+            <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-4" *isAuthorized="'admin-panel'; in : userViewableSections">
+        <div class="card border-warning mb-3" >
+          <div class="card-header">Admin Panel</div>
+          <div class="card-body text-warning">
+            <h5 class="card-title">Administrative panel </h5>
+            <p class="card-text">Some quick example text to build on the  and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+      </div>
 </div>
